# cpp-cgdk

./: .gitignore  CMakeLists.txt  Makefile  MyStrategy.cpp  MyStrategy.h  RemoteProcessClient.cpp  RemoteProcessClient.h  Runner.cpp  Runner.h  Strategy.h  compile-g++.bat  compile-g++11.bat  compile-vscpp.bat  cpp-cgdk.sln  cpp-cgdk.vcproj  cpp-cgdk.vcxproj  cpp-cgdk.vcxproj.filters  cpp-cgdk_vs10.sln  cpp-cgdk_vs10.vcxproj  cpp-cgdk_vs10.vcxproj.filters  cpp-cgdk_vs11.sln  cpp-cgdk_vs11.vcxproj  cpp-cgdk_vs11.vcxproj.filters  cpp-cgdk_vs12.sln  cpp-cgdk_vs12.vcxproj  cpp-cgdk_vs12.vcxproj.filters  cpp-cgdk_vs9.sln  cpp-cgdk_vs9.vcproj  premake4.lua
cpp-cgdk.xcodeproj/: project.pbxproj
csimplesocket/: SimpleSocket.h
model/: ActionType.h  Game.cpp  Game.h  Hockeyist.cpp  Hockeyist.h  HockeyistState.h  HockeyistType.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerContext.cpp  PlayerContext.h  Puck.cpp  Puck.h  Unit.cpp  Unit.h  World.cpp  World.h
